feat: temporary endpoint for creating admins
