# app/Http/Controllers/API/AdminController.php
@@ -1,0 +1,54 @@
+<?php
+
+namespace App\Http\Controllers\API;
+
+use App\Http\Controllers\Controller;
+use App\Models\User;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Validator;
+use Illuminate\Validation\Rules\Password;
+
+class AdminController extends Controller
+{
+    /**
+     * Handle the incoming request.
+     */
+    public function __invoke(Request $request)
+    {
+        $validation = Validator::make($request->input(), [
+            'name' => 'required|string|min:2|max:16',
+            'email' => 'required|email|max:64|unique:users',
+            'password' => ['required', Password::min(8)
+                ->mixedCase()
+                ->letters()
+                ->numbers()
+                ->symbols()
+            ],
+        ]);
+
+        if ($validation->fails()) {
+            return error_response('validation error', extract_errors($validation->errors()->toArray()), 422);
+        }
+
+        $admin = User::create([
+            'name'=> $request->name,
+            'email' => $request->email,
+            'password' => Hash::make($request->password),
+            'role' => 'admin'
+        ]);
+
+        $token = Auth::guard('api')->attempt($request->only('email', 'password'));
+
+        return success_response('admin created successfully', [
+            'accessToken' => $token,
+            'admin' => [
+                'id' => $admin->id,
+                'name' => $admin->name,
+                'email' => $admin->email,
+                'role' => $admin->role,
+            ]
+        ], 201);
+    }
+}
